# gbp-pilot-review

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  CLAUDE.md  North-Star.md  README.md  Roadmap.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  setup.md  setupProd.md
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 0001_initial.py  0003_add_client_ai_profile.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: generation_preview.py  me.py  oauth.py  onboarding.py  responses.py  reviews.py  settings.py  subscription.py
backend/app/api/v1/admin/: clients.py  deletions.py  monitoring.py
backend/app/integrations/claude/: client.py
backend/app/integrations/lemonsqueezy/: client.py
backend/app/models/: base.py  client.py  client_settings.py  dead_letter_job.py  notification.py  regeneration.py  response.py  review.py  user.py  webhook_event.py
backend/app/repositories/: notification_repository.py  quota_repository.py  review_repository.py
backend/app/schemas/: auth.py  settings.py
backend/app/services/: admin_metrics.py  filtering_service.py  generation_service.py  oauth_service.py  prompt_service.py  publication_service.py  subscription_service.py
backend/app/tasks/: maintenance_tasks.py  notification_tasks.py
backend/app/utils/: language.py
backend/tests/: conftest.py
backend/tests/e2e/: test_configuration_journey.py  test_signup_journey.py  test_validation_journey.py
backend/tests/factories/: __init__.py
backend/tests/integration/: test_api_responses_validation.py  test_errors_and_retries.py  test_lemonsqueezy_webhook.py
backend/tests/load/: locustfile.py  simulate_pipeline.py
backend/tests/security/: test_owasp_basics.py
backend/tests/unit/: test_billing_variant.py  test_generation_preview.py  test_language.py  test_oauth_service.py  test_prompt_render.py  test_prompt_tone.py  test_repositories.py  test_subscription_service.py
docs/: runbook.md
scripts/: deploy.sh
(+2 files in other folders)
