[project]
name = "gbp-pilot-review"
version = "0.1.0"
description = "Backend FastAPI/Celery pour l'automatisation des réponses aux avis Google Business Profile"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "argon2-cffi>=23.1",
    "cryptography>=43.0",
    "pyjwt>=2.9",
    "anthropic>=0.40",
    "pybreaker>=1.2",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "lingua-language-detector>=2.0",
    "jinja2>=3.1",
    "uuid-utils>=0.10",
    "email-validator>=2.2",
    "sentry-sdk[fastapi,celery]>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyjwt>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "PTH", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions", "tests/load/"]

[[tool.mypy.overrides]]
module = ["pybreaker.*", "factory.*", "locust.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The session-scoped db_engine fixture opens asyncpg connections that cannot be
# shared across event loops; pin fixtures and tests to a single session-scoped
# loop so they reuse the same loop as the engine.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
markers = [
    "integration: requires Postgres + Redis",
    "e2e: full pipeline test",
]
